--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
+    "@angular/animations": "^18.2.13",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "express": "^4.18.2",
     "json-server": "^1.0.0-beta.3",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.6",
     "tslib": "^2.3.0",
